tests/paczka2/big_fuzzy/91130889.err
Error in line 6: 08NOi7MdH S952 45,4
Error in line 46: 6pwpFxDWZ S952 66,4
Error in line 41: 08NOi7MdH S952 16,0
Error in line 56: 3SyN A752 20,5
Error in line 61: 1x2 A394 22,1
Error in line 60: 6pwpFxDWZ A752 47,5
Error in line 72: 1x2 S952 "8,4
Error in line 62: 1x2 A339 23,3
Error in line 79: 3SyN S952 3,4
Error in line 91: 3SyN A339 47,5
Error in line 94: 6pwpFxDWZ A394 -1,8
Error in line 77: 1x2 S952 361,4
Error in line 98: 1vR S952 4,2
Error in line 103: 1vR A752 -1,6
Error in line 105: 3SyN S952 84,7
Error in line 87: A752 A394 10,3
Error in line 129: 752 752 14,6
Error in line 120: Xq5wFiBG A752 82,0
Error in line 133: 08NOi7MdH A339 16,4
Error in line 144: 1x2 A752 63,5
Error in line 147: 1x2 S952 68,1
Error in line 156: 3SyN S95= 65,0
Error in line 148: 1x2 A394 66,8
Error in line 153: 3SyN S952 30,8
Error in line 159: A752 A394 86,1
Error in line 158: 1x2 A794 299,9
Error in line 171: 1x2 S952 41,7
Error in line 146: 1vR A752 244,6
Error in line 163: 08NOi7MdH A339 304,4
Error in line 204: 1vR A339 53,2
Error in line 201: 3SyN A394 83,3
Error in line 203: 6pwpFxDWZ S952 66,9
Error in line 212: 1x2 A339 86,3
Error in line 218: 3SyN S952 90,6
Error in line 219: 3SyN A394 21,1
Error in line 226: 1vR A339 63,5
Error in line 236: A752 A394 97,0
